# bcb-warehouse

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dags/: bcb_warehouse_dag.py  bcb_warehouse_maintenance_dag.py
dbt/bcb_warehouse/: dbt_project.yml  profiles.yml.example
dbt/bcb_warehouse/macros/: generate_surrogate_key.sql
dbt/bcb_warehouse/models/mart/: dim_data.sql  dim_serie.sql  fct_cotacoes_diarias.sql  fct_indicadores_mensais.sql  schema.yml
dbt/bcb_warehouse/models/staging/: schema.yml  sources.yml  stg_ipca.sql  stg_selic.sql  stg_usd_brl.sql
dbt/bcb_warehouse/seeds/: dim_data_seed.csv  dim_serie_seed.csv  feriados_nacionais.csv
docs/adr/: 0000-convencoes-adr.md  0001-formato-armazenamento-iceberg-vs-parquet-plano.md  0002-estrutura-camadas-s3-warehouse.md  0003-divisao-responsabilidades-glue-job-dbt.md  0004-modelo-dimensional-star-schema.md  0005-orquestracao-dag-estendida-vs-dag-separada.md  0006-estrategia-qualidade-dbt-tests-vs-great-expectations.md  0007-estrutura-repositorio-bcb-warehouse.md  0008-manutencao-tabelas-iceberg-optimize-vacuum.md  0009-fonte-populacao-dimensoes-estaticas.md
docs/architecture/: warehouse_architecture.md
glue/: requirements.txt
glue/jobs/: bcb_staging_transform.py
tests/unit/glue/: conftest.py  test_read.py  test_transforms.py
tools/: generate_dim_data.py
