[project]
name = "bcb-warehouse"
version = "0.1.0"
description = "Pipeline de transformação e modelagem dimensional dos dados econômicos do Banco Central do Brasil"
requires-python = ">=3.11"

dependencies = [
    "boto3==1.34.144",
    "pyspark==3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "moto[s3,glue]==5.0.11",
    "ruff==0.5.0",
    "mypy==1.10.1",
    "boto3-stubs[s3,glue,athena]==1.34.144",
    "pyarrow>=16.0.0",  # criação de fixtures Parquet nos testes (Python 3.14 + PySpark 3.5 incompatíveis no createDataFrame)
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["glue*", "tools*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # function calls in default arguments (comum em Airflow)
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# --cov-fail-under omitido: testes Spark são skipped no Windows sem winutils.
# Em CI (Linux) adicionar: --cov-fail-under=80
addopts = "--cov=glue --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "tests/*",
    "dags/*",
    "tools/*",
]
